# Smart-Finance

./: .vercelignore  README.md  build_files.sh  pyproject.toml  requirements.txt  vercel.json
budgets/: forms.py  models.py  urls.py  views.py
budgets/migrations/: 0001_initial.py  0002_initial.py
budgets/static/css/: Dashboard.css  Reports.css  budgetAlerts.css  savingGoals.css
budgets/templates/budgets/: budgetAlert.html  budget_form.html  budget_list.html  dashboard.html
config/: settings.py  urls.py  wsgi.py
documentation/: budgets.html  goals.html  index.html  search.js  transactions.html  users.html
documentation/budgets/: admin.html  apps.html  forms.html  migrations.html  models.html  tests.html  urls.html  views.html
documentation/budgets/migrations/: 0001_initial.html  0002_initial.html
documentation/goals/: admin.html  apps.html  forms.html  migrations.html  models.html  tests.html  urls.html  views.html
documentation/goals/migrations/: 0001_initial.html
documentation/transactions/: admin.html  apps.html  forms.html  migrations.html  models.html  tests.html  urls.html  views.html
documentation/users/: admin.html  apps.html  forms.html  migrations.html  models.html  tests.html  urls.html  views.html
goals/: forms.py  models.py  urls.py  views.py
goals/migrations/: 0001_initial.py
staticfiles/css/: login.css
transactions/: forms.py  models.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_income_budget.py
users/: backends.py  forms.py  models.py  views.py
users/migrations/: 0001_initial.py
(+13 files in other folders)
