[project]
name = "smart-finance"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Django==6.0.4",
    "djangorestframework==3.17.1",
    "psycopg2-binary>=2.9.9",
]

[tool.vercel]
entrypoint = "config.wsgi:application"

[tool.vercel.scripts]
build = "if [ -n \"$DATABASE_URL\" ]; then python manage.py migrate --noinput; fi"
